添加了二分查找和访问概率列表至于图的操作则暂未实现，实在是没时间呀，T_T...

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,4 +4,4 @@ project(DataStructure)
 
 set(CMAKE_CXX_STANDARD 14)
 
-add_executable(DataStructure chapter6/MGraph.cpp)
+add_executable(DataStructure chapter7/RateList.cpp)
